--- a/autoload-cache-manager/autoload-cache-manager-jedis/pom.xml
+++ b/autoload-cache-manager/autoload-cache-manager-jedis/pom.xml
@@ -25,5 +25,11 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
