--- a/autoload-cache-script/autoload-cache-script-ognl/pom.xml
+++ b/autoload-cache-script/autoload-cache-script-ognl/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
+            <version>3.1.15</version>
         </dependency>
     </dependencies>
 </project>
