--- a/autoload-cache-spring-boot-starter/pom.xml
+++ b/autoload-cache-spring-boot-starter/pom.xml
@@ -20,7 +20,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.7.18</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -177,6 +177,16 @@
       <artifactId>fastjson</artifactId>
       <scope>compile</scope>
       <optional>true</optional>
+    </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.22</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
 
